tests/baselines/reference/privateNameAndAny.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts(5,15): error TS2339: Property '#bar' does not exist on type 'any'.


==== tests/cases/conformance/classes/members/privateNames/privateNameAndAny.ts (1 errors) ====
    class A {
        #foo = true; 
        method(thing: any) {
            thing.#foo; // OK
            thing.#bar; // Error
                  ~~~~
!!! error TS2339: Property '#bar' does not exist on type 'any'.
        }
    };
    